# pyinmean

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/: publish-to-pypi.yml
.github/workflows/: main.yml
src/pyinmean/: bindings.cpp
src/pyinmean.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
