[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "cmake",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyinmean"
version = "0.1.0"
description = "Python bindings for IMA rhythm analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"

authors = [
    { name = "Efraim Dahl", email = "efraimcdahl@gmail.com" }
]

maintainers = [
    { name = "Efraim Dahl", email = "efraimcdahl@gmail.com" }
]

keywords = [
    "IMA", "rhythm", "music", "symbolic music",
    "inner metric weight", "spectral weight"
]

[project.urls]
Homepage = "https://github.com/efraimdahl/pyinmean"
Repository = "https://github.com/efraimdahl/pyinmean"
Issues = "https://github.com/efraimdahl/pyinmean/issues"
